[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stressless"
version = "0.1.0"
description = "A graphical user interface for analyzing Split-Hopkinson Pressure Bar data."
readme = "readme.md"
license = { text = "MIT" }
authors = [
    { name = "Gabe Morris", email = "gabemorris1231@gmail.com" }
]
dependencies = [
    "PyQt6",
    "xlwings",
    "matplotlib"
    # Add additional dependencies here if needed.
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/gabemorris12/stressless"

[project.scripts]
stressless = "stressless.gui.stressless_gui:main"
